%% Diagrama Entidad-Relación del proyecto "Imperio" (sincronizado con base de datos/imperio.sql)

erDiagram
    JUGADORES {
        INT id PK
        VARCHAR username
        VARCHAR email
        VARCHAR password
        DATE fecha_registro
    }

    GALAXIAS {
        INT id PK
        VARCHAR nombre
        VARCHAR sector
    }

    PLANETAS {
        INT id PK
        VARCHAR nombre
        INT coordenadaX
        INT coordenadaY
        INT superficie
        INT id_galaxia FK
        INT jugador_id FK
    }

    LUNAS {
        INT id PK
        VARCHAR nombre
        INT superficie
        INT planeta_id FK
    }

    RECURSOS {
        INT id PK
        VARCHAR nombre
    }

    NAVES {
        INT id PK
        VARCHAR nombre
        INT costo_metal
        INT costo_cristal
        INT costo_energia
    }

    EDIFICIOS {
        INT id PK
        VARCHAR nombre
        INT costo_metal
        INT costo_cristal
        INT costo_energia
    }

    ARMAMENTOS {
        INT id PK
        VARCHAR nombre
        INT costo_metal
        INT costo_cristal
        INT costo_energia
    }

    PLANETAS_RECURSOS {
        INT planeta_id FK
        INT recurso_id FK
        INT cantidad
    }

    PLANETAS_NAVES {
        INT planeta_id FK
        INT nave_id FK
        INT cantidad
    }

    PLANETAS_EDIFICIOS {
        INT planeta_id FK
        INT edificio_id FK
        INT nivel
    }

    PLANETAS_ARMAMENTOS {
        INT planeta_id FK
        INT armamento_id FK
        INT cantidad
    }

    GALAXIAS ||--|{ PLANETAS : "contiene"
    JUGADORES ||--|{ PLANETAS : "posee"
    PLANETAS ||--|{ LUNAS : "tiene"

    PLANETAS ||--|{ PLANETAS_RECURSOS : "tiene"
    RECURSOS ||--|{ PLANETAS_RECURSOS : "asignado"

    PLANETAS ||--|{ PLANETAS_NAVES : "alberga"
    NAVES ||--|{ PLANETAS_NAVES : "desplegada"

    PLANETAS ||--|{ PLANETAS_EDIFICIOS : "construye"
    EDIFICIOS ||--|{ PLANETAS_EDIFICIOS : "instalado"

    PLANETAS ||--|{ PLANETAS_ARMAMENTOS : "instala"
    ARMAMENTOS ||--|{ PLANETAS_ARMAMENTOS : "equipado"
